[gd_scene load_steps=2 format=2]

[ext_resource path="res://NetworkSetup.gd" type="Script" id=1]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Config" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServer" type="Button" parent="Config"]
anchor_left = 24.0
anchor_top = 9.15
anchor_right = 24.0
anchor_bottom = 9.15
margin_left = -320.0
margin_top = -46.0
margin_right = 320.0
margin_bottom = 46.0
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="Config"]
anchor_left = 24.0
anchor_top = 12.35
anchor_right = 24.0
anchor_bottom = 12.35
margin_left = -320.0
margin_top = -46.0
margin_right = 320.0
margin_bottom = 46.0
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIPAddress" type="LineEdit" parent="Config"]
anchor_left = 24.0
anchor_top = 4.0
anchor_right = 24.0
anchor_bottom = 4.0
margin_left = -448.0
margin_top = -32.0
margin_right = 448.0
margin_bottom = 32.0
placeholder_text = "Enter Server IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIPAddress" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Config/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="Config/JoinServer" to="." method="_on_JoinServer_pressed"]
